# src/Infrastructure/API/Controller/TeamCommandController.php
@@ -5,6 +5,7 @@ namespace HexagonalPlayground\Infrastructure\API\Controller;
 
 use HexagonalPlayground\Application\Command\CreateTeamCommand;
 use HexagonalPlayground\Application\Command\DeleteTeamCommand;
+use HexagonalPlayground\Application\Command\UpdateTeamContactCommand;
 use HexagonalPlayground\Infrastructure\API\Exception\BadRequestException;
 use Slim\Http\Request;
 use Slim\Http\Response;
@@ -36,10 +37,31 @@ class TeamCommandController extends CommandController
     }
 
     /**
+     * @param string $teamId
+     * @param Request $request
      * @return Response
      */
-    public function rename() : Response
+    public function updateContact(string $teamId, Request $request) : Response
     {
-        return new Response(404);
+        $firstName = $request->getParsedBodyParam('first_name');
+        $lastName  = $request->getParsedBodyParam('last_name');
+        $phone     = $request->getParsedBodyParam('phone');
+        $email     = $request->getParsedBodyParam('email');
+
+        $this->assertTypeExact('first_name', $firstName, 'string');
+        $this->assertTypeExact('last_name', $lastName, 'string');
+        $this->assertTypeExact('phone', $phone, 'string');
+        $this->assertTypeExact('email', $email, 'string');
+        $this->validateEmail($email);
+
+        $this->commandBus->execute(new UpdateTeamContactCommand(
+            $teamId,
+            $firstName,
+            $lastName,
+            $phone,
+            $email
+        ));
+
+        return new Response(204);
     }
 }
